# daw-deps

./: .gitignore  .gitmodules  CMakeLists.txt  build.py  portaudio-wasapi-loopback.patch  readme compile.txt  ubuntu-dep.txt
ASIOSDK2.3/common/: asio.cpp
ASIOSDK2.3/host/pc/: asiolist.cpp
SQLiteCpp/: CMakeLists.txt
SQLiteCpp/sqlite3/: CMakeLists.txt
SplineLibrary/: splinedemo.qrc
SplineLibrary/demo/: graphicscontroller.cpp  graphicscontroller.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  settings.cpp  settings.h  settingswidget.cpp  settingswidget.h  settingswidget.ui
SplineLibrary/spline_library/utils/: spline_common.h
cereal/cereal/: cereal.hpp
cereal/cereal/details/: polymorphic_impl.hpp
dukglue/: REV
duktape/: CMakeLists.txt
glad/gl-3.2-compat/include/glad/: glad.h
glad/gl-3.2-compat/src/: glad.c
glad/gl-3.2-core/include/glad/: glad.h
glad/gl-3.2-core/src/: glad.c
glad/gl-4.6-comp/src/: glad.c
glad/gl-4.6-compat/include/glad/: glad.h
glad/include/glad/: glad.h
glad/src/: glad.c
glfw/examples/: boing.c  gears.c  heightmap.c  offscreen.c  particles.c  sharing.c  splitview.c  triangle-opengl.c  wave.c  windows.c
glfw/include/GLFW/: glfw3.h  glfw3native.h
glfw/src/: cocoa_platform.h  cocoa_window.m  context.c  init.c  input.c  internal.h  win32_init.c  win32_platform.h  win32_window.c  window.c  x11_init.c  x11_platform.h  x11_window.c
glm/glm/: glm.hpp  packing.hpp
glm/glm/detail/: func_packing.inl  setup.hpp  type_vec.hpp  type_vec2.hpp
glm/glm/ext/: matrix_clip_space.inl
glm/glm/gtc/: type_ptr.inl
kissfft/: git.rar
libarchive-cmake-build/: CMakeLists.txt  archive_dummy.c  archive_read_support_filter_all.c  archive_read_support_format_all.c  archive_write_add_filter.c  archive_write_set_format.c  config-linux-clang.h  config-macos-clang.h  config-win-clang.h  config-win-msvc.h  config.h
nvwa/nvwa/: debug_new.cpp
portaudio/cmake_support/: FindDXSDK.cmake
portaudio/src/hostapi/wasapi/: pa_win_wasapi.c
portmidi/: CMakeLists.txt
portmidi/cmake_support/: portmidi-2.0.pc.in
portmidi/pm_common/: CMakeLists.txt  portmidi.c
portmidi/pm_linux/: finddefault.c  pmlinuxalsa.c
portmidi/pm_win/: pmwin.c  pmwinmm.c
pybind11/: .gitignore  REV
soxr/: CMakeLists.txt
soxr/src/: data-io.c
soxr/tests/: throughput.c
zlib-cmake-build/: CMakeLists.txt
